--- a/pages/landingPage.html
+++ b/pages/landingPage.html
@@ -2,8 +2,10 @@
   <div class="intro-text">
     <h3>Hi.</h3>
     <p>
-      My name is Nick. I'm really hungry right now. I've had nothing but coffee today. Come on in. The poverty is real.
+      My name is Nick. I'm very angular. I've had nothing but coffee today. Come on in. Filler text.
     </p>
   </div>
-  <img class="cirque" src="imgs/cirque.png" alt="">
+  <div class="logo-cont">
+    <img class="cirque" src="imgs/cirque.png" alt="">
+  </div>
 </section>
