--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <!--     LINKIN     -->
     <link href="https://fonts.googleapis.com/css?family=Barlow:600|Dosis:300,600" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <base href="/angularJSExp/" />
+
   </head>
   
   <body ng-controller="mainCtrl as vm">
